2021.11/_sources/index.rst.txt
.. SPDX-FileCopyrightText: 2013-2021 Stefano Babic <sbabic@denx.de>
.. SPDX-License-Identifier: GPL-2.0-only

.. _contents: Table of contents

.. image:: images/SWUpdate.png
        :scale: 25 %
        :align: center

############################################
Updating an embedded system
############################################

SWUpdate provides a reliable way to update
the software on an embedded system.
Sources are hosted at https://github.com/sbabic/swupdate

.. raw:: html

        <center>
        <a class="github-button" href="https://github.com/sbabic/swupdate" data-icon="octicon-star" data-size="large" aria-label="Star sbabic/swupdate on GitHub">Star SWUpdate</a>
        <script async defer src="https://buttons.github.io/buttons.js"></script>
        </center>

.. toctree::
   :maxdepth: 2

   overview.rst
   licensing.rst

############################################
SWUpdate Documentation
############################################

.. toctree::
   :maxdepth: 2

   swupdate.rst
   scenarios.rst
   sw-description.rst
   signed_images.rst
   encrypted_images.rst
   handlers.rst
   mongoose.rst
   suricatta.rst
   hawkbit-setup.rst
   swupdate-ipc-interface.rst
   progress.rst
   bindings.rst
   building-with-yocto.rst
   swupdate-best-practise.rst
   delta-update.rst

############################################
Utilities and tools
############################################

.. toctree::
   :maxdepth: 2

   swupdate-client.rst
   swupdate-progress.rst
   swupdate-ipc.rst

############################################
Help and support
############################################

.. toctree::
   :maxdepth: 2

   help_and_support.rst
   contributing.rst

############################################
Roadmap
############################################

.. toctree::
   :maxdepth: 2

   roadmap.rst

############################################
Previous releases
############################################

.. toctree::
   :maxdepth: 2

   previous-releases.rst

Indices and tables
==================

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
